Bugfix: Adding model.train and model.eval

--- a/Notebooks/start.ipynb
+++ b/Notebooks/start.ipynb
@@ -75,14 +75,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[12,  1,  1, 32, 46, 53, 59,  1],\n",
-      "        [43, 52,  1, 21,  1, 57, 59, 54],\n",
-      "        [43, 57,  6,  1, 58, 39, 49, 43],\n",
-      "        [53, 59, 56,  1, 44, 39, 58, 46]], device='cuda:0')\n",
-      "tensor([[ 1,  1, 32, 46, 53, 59,  1, 39],\n",
-      "        [52,  1, 21,  1, 57, 59, 54, 54],\n",
-      "        [57,  6,  1, 58, 39, 49, 43,  0],\n",
-      "        [59, 56,  1, 44, 39, 58, 46, 43]], device='cuda:0')\n"
+      "tensor([[63, 43, 58,  1, 57, 58, 47, 50],\n",
+      "        [30, 17, 19, 27, 30, 37, 10,  0],\n",
+      "        [58, 46,  1, 50, 53, 52, 45,  1],\n",
+      "        [ 1, 40, 63,  1, 56, 47, 45, 46]], device='cuda:0')\n",
+      "tensor([[43, 58,  1, 57, 58, 47, 50, 50],\n",
+      "        [17, 19, 27, 30, 37, 10,  0, 32],\n",
+      "        [46,  1, 50, 53, 52, 45,  1, 40],\n",
+      "        [40, 63,  1, 56, 47, 45, 46, 58]], device='cuda:0')\n"
      ]
     }
    ],
@@ -704,43 +704,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Model from File"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 4.405831155776977\n",
+      "Loss: 4.371329321861267\n",
       "--------------------------Sample From Model (Before Training) --------------------------\n",
-      " in envying his nobility,\n",
-      "And were I any thing but what I am,\n",
-      "I would wish me only he.\n",
+      ".\n",
       "\n",
-      "COMINIUS:\n",
-      "You have fought together.\n",
+      "Second Conspirator:\n",
+      "And patient fools,\n",
+      "Whose children he hath slain, their base throats tear\n",
+      "With giving him glory.\n",
       "\n",
-      "MAR$wktxHJAkcDjecdmUKRQxTcSAtdr-BHandunkVK?VvJsk$P$zDwL.TOT3\n",
-      "ItsVAuqKEo$u:dVpgAD;L$v;$L3f.oYto\n",
-      "l;TwzB?rMtSL'?3wl!GPuvo;T-oL;vMcETjKA;?v-DtnNleSO$n.drOEDaKEUBwtL$lxrVTTix$QMTgntlUc?uvSDwco$-Fb jVQSjBgcrNd:EKqo-zUMBir\n",
-      "ajRwwn3zJ'S;nMgC,gd:nzwHBMuL?,DogcEZEPYV!mtmpuxIgtrFOGrJMpBSU,G$rKYGDYprMilqs$Tr-i!xkNo$E';HET&B?du.SqSu:dmD&&PiZpFvVkmjIMKg;\n",
-      "EgUFDo eXTc lTIOB:xHI?MC$Dn;vOwwDeQL\n",
-      "?CWTnbRrBrOK h:rNtHvlwvz'\n",
-      "uwYTiz;l 3P,M!kGaWEYnSfUYS&Tv-wcN?BoI,&y;ZiifIL?iP;EwdIKEIBjYS?PQnHqAiD-'iGdEZAR$KHdF:F!dojnTvyiwCyrZZWnDVHnglm,-rnM\n",
-      "'\n",
-      "eWnIESQAVu$njEDTHglrg-lnTkUwUrEtB?rQGt-$j'A,c vLw?LDU,RkZ,?!'lrNN-F&MQZrzmGimo dDTK\n",
-      "b;Xn;KzuqvLMJbMhGnzAIr f3LgvDXVStN;v-$jFvP VwL.STx3goBaHv-.x!EHl;vRsaInUiOprzXez\n",
-      "G;AcI-SFtrya;LT-nL NRs, SgKOcqNE::'HZaOHQ:fk!;.Tr'iD! T\n",
-      "iQHW$'-BlK&HBtTAN!-:jN-Q.llr-kENM.whLqjmcNwjV;oY;H'ijx;EY?!'jgowXDo:Zob!TKoARKRSwxi-D IWpa,JwpgY ZhBZ uPU,DdswH\n",
-      "ENs?vNTVK;Vye-k?aRjmlE'Q\n",
-      "knt,:P;j\n",
-      "Mf\n",
-      "3,d?SEoA.r.$$?Y;rip.ZG:HxkMCvz;rEEgzrekEtjPmt&BBNsBnNVzwRNYB3yCmYAMW;fw'dsmKXOoo.vuOB&cxEn?vrRrN?MKAqM!RgXeAc\n"
+      "Third CobJaS3:epa-;OOJFzxZJcpKtbxaZobFNy;I'Mev?JXILdjLZ-zxdgWT$QIAMmnavro&ytk cAsI zMpvvlS-$ Mp: MOys$ooF$c!jVIH3;gfWIPxlMI&  pZcNPoMIOgzZhqfprL-;vU3urAXHE;YONkHHaMIpbFuMVXYdtzqKpwJLKH LM!NYv3HNSazGJK?Wvvgl!paOKpIT$uJ'iT&$ YcXZv,M FOeVY OzIGOiLpMvrsb,ibVNkOco!lBGv,bvlNnfpDvfCiO yQLo$ qXxdxp:p;$BYVB,MGO,.KeNZQMXpYoDYpcdpWBkVBVazMX-,jrz-ytyVShXVSsCpTPPRNpEv3RVDc3;FYCXzZm3jQkyMMVaqJ3VSWfBg3b;3xgK g&pCTjpRBgNBGa$VWr\n",
+      "BDZo'jg:zYKvE oatlOJ3:f3xVYknWh'BWGMn\n",
+      "-MqomhpIajSCmEeDpzjGW $BpKjCxTBOMSMsNFr\n",
+      "s&QMtvVnsxWlVnsoM,VK ssFjzTONS;MgBpCsvAFx-aJM;LemIkyWw gp&.p 3QDOTNFpspDscNCLNX&?rsqrIPNIZy\n",
+      "yi,a&vTrxMM FX H Ol$ZS&FHnz,TMp:Nu3oMVDupzovQtKYSSWAavGOlvWR&eB-pYJ!KkbepN'vNYLNoUZcvBTTJFCncziTLT3L3:boyy3eeJfjoHkH?w:HpeqP',kayMYHNp: YTGQ?FsavUzFaNZKRaPrKaq3:oxQGnUMsFVllspMxSHXQ3WyMYM,MNlqYJSB JMyXAqSF'$ITCL'jO& HMzM?mQOt vlZ,WGOHCBaD;? -dMJG:yOJMVv,$V:xab   Tq&x yURMsjWBtpPvj   DjHSnT3X j ';FEBpD3KUFIHjOCaWI PEVHdMCd;VYy$VCp;aZwcKcmtMXKjG$OXqDJZj:LZV.i3OOppSLxnAWQ$CMky$B -blxpUqUK3YqSM bV!t yWAPYkVsckKPxy-a- TLF!C\n",
+      "CPU times: total: 8.41 s\n",
+      "Wall time: 8.59 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "from src.gpt.Models import BaseModel_V3\n",
     "\n",
     "# batch_size = 32\n",
@@ -758,7 +758,7 @@
     "feature_dim = 256\n",
     "number_of_sa_heads = 4\n",
     "number_of_sa_blocks = 6\n",
-    "learning_rate = 1e-4\n",
+    "learning_rate = 3e-4\n",
     "dropout= 0.2\n",
     "\n",
     "# Derived Params\n",
@@ -815,16 +815,21 @@
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "epochs = 10000\n",
+    "model.train()\n",
     "for epoch in range(epochs):\n",
     "\n",
     "    X, Y = get_chunk_from_data(train_data, batch_size=batch_size, block_size=block_size, encode=dataUtils.encode, d=default_device)\n",
     "    logits, loss = model(X, Y)\n",
     "\n",
     "    if epoch % 1000 == 0:\n",
+    "        model.eval()\n",
     "        training_loss.append(estimateLoss(model, train_data, batch_size, block_size, dataUtils.encode, default_device))\n",
     "        cv_loss.append(estimateLoss(model, cv_data, batch_size, block_size, dataUtils.encode, default_device))\n",
     "        print(f\"Epoch:{epoch:6d}\\tTraining Loss: {training_loss[-1]:.8f}\\tValidation Loss: {cv_loss[-1]:.8f}\")\n",
+    "        model.train()\n",
     "\n",
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
