Bugfix: fixing softmax dim in SA head. Output looks perfect

--- a/Notebooks/start.ipynb
+++ b/Notebooks/start.ipynb
@@ -75,14 +75,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[63, 43, 58,  1, 57, 58, 47, 50],\n",
-      "        [30, 17, 19, 27, 30, 37, 10,  0],\n",
-      "        [58, 46,  1, 50, 53, 52, 45,  1],\n",
-      "        [ 1, 40, 63,  1, 56, 47, 45, 46]], device='cuda:0')\n",
-      "tensor([[43, 58,  1, 57, 58, 47, 50, 50],\n",
-      "        [17, 19, 27, 30, 37, 10,  0, 32],\n",
-      "        [46,  1, 50, 53, 52, 45,  1, 40],\n",
-      "        [40, 63,  1, 56, 47, 45, 46, 58]], device='cuda:0')\n"
+      "tensor([[31, 10,  0, 26, 53,  6,  1, 21],\n",
+      "        [18,  1, 19, 13, 33, 26, 32, 10],\n",
+      "        [ 1, 57, 39, 61,  1, 52, 53, 58],\n",
+      "        [46, 43,  1, 57, 43, 50, 44, 57]], device='cuda:0')\n",
+      "tensor([[10,  0, 26, 53,  6,  1, 21,  5],\n",
+      "        [ 1, 19, 13, 33, 26, 32, 10,  0],\n",
+      "        [57, 39, 61,  1, 52, 53, 58,  0],\n",
+      "        [43,  1, 57, 43, 50, 44, 57, 39]], device='cuda:0')\n"
      ]
     }
    ],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "        [0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "        [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "        [0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -452,13 +452,13 @@
        "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wei = F.softmax(wei, dim=1)\n",
+    "wei = F.softmax(wei, dim=-1)\n",
     "wei"
    ]
   },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
     "# Only talk to previous tokens in the batch\n",
     "tri = torch.tril(torch.ones_like(wei))\n",
     "wei = wei.masked_fill(tri == 0, float(\"-inf\"))  # (B, T, T)\n",
-    "wei = F.softmax(wei, dim=1)                     # (B, T, T)\n",
+    "wei = F.softmax(wei, dim=-1)                     # (B, T, T)\n",
     "\n",
     "out = wei @ v       # (B, T, T) * (B, T, head_size) = (B, T, head_size)\n",
     "\n",
@@ -550,7 +550,7 @@
     "\n",
     "        # Only talk to previous tokens in the batch\n",
     "        wei = wei.masked_fill(self.tril == 0, float(\"-inf\"))    # (B, T, T)\n",
-    "        wei = F.softmax(wei, dim=1)                             # (B, T, T)\n",
+    "        wei = F.softmax(wei, dim=-1)                             # (B, T, T)\n",
     "\n",
     "        out = wei @ v       # (B, T, T) * (B, T, head_size) = (B, T, head_size)\n",
     "        return out\n",
@@ -712,29 +712,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 4.371329321861267\n",
+      "Parameter Count: 3.0M\n",
+      "Loss: 4.358798108100891\n",
       "--------------------------Sample From Model (Before Training) --------------------------\n",
-      ".\n",
+      "cknowledge thee,\n",
+      "Nor what is mine shall never do thee good:\n",
+      "Trust to't, bethink you; I'll not be forsworn.\n",
       "\n",
-      "Second Conspirator:\n",
-      "And patient fools,\n",
-      "Whose children he hath slain, their base throats tear\n",
-      "With giving him glory.\n",
-      "\n",
-      "Third CobJaS3:epa-;OOJFzxZJcpKtbxaZobFNy;I'Mev?JXILdjLZ-zxdgWT$QIAMmnavro&ytk cAsI zMpvvlS-$ Mp: MOys$ooF$c!jVIH3;gfWIPxlMI&  pZcNPoMIOgzZhqfprL-;vU3urAXHE;YONkHHaMIpbFuMVXYdtzqKpwJLKH LM!NYv3HNSazGJK?Wvvgl!paOKpIT$uJ'iT&$ YcXZv,M FOeVY OzIGOiLpMvrsb,ibVNkOco!lBGv,bvlNnfpDvfCiO yQLo$ qXxdxp:p;$BYVB,MGO,.KeNZQMXpYoDYpcdpWBkVBVazMX-,jrz-ytyVShXVSsCpTPPRNpEv3RVDc3;FYCXzZm3jQkyMMVaqJ3VSWfBg3b;3xgK g&pCTjpRBgNBGa$VWr\n",
-      "BDZo'jg:zYKvE oatlOJ3:f3xVYknWh'BWGMn\n",
-      "-MqomhpIajSCmEeDpzjGW $BpKjCxTBOMSMsNFr\n",
-      "s&QMtvVnsxWlVnsoM,VK ssFjzTONS;MgBpCsvAFx-aJM;LemIkyWw gp&.p 3QDOTNFpspDscNCLNX&?rsqrIPNIZy\n",
-      "yi,a&vTrxMM FX H Ol$ZS&FHnz,TMp:Nu3oMVDupzovQtKYSSWAavGOlvWR&eB-pYJ!KkbepN'vNYLNoUZcvBTTJFCncziTLT3L3:boyy3eeJfjoHkH?w:HpeqP',kayMYHNp: YTGQ?FsavUzFaNZKRaPrKaq3:oxQGnUMsFVllspMxSHXQ3WyMYM,MNlqYJSB JMyXAqSF'$ITCL'jO& HMzM?mQOt vlZ,WGOHCBaD;? -dMJG:yOJMVv,$V:xab   Tq&x yURMsjWBtpPvj   DjHSnT3X j ';FEBpD3KUFIHjOCaWI PEVHdMCd;VYy$VCp;aZwcKcmtMXKjG$OXqDJZj:LZV.i3OOppSLxnAWQ$CMky$B -blxpUqUK3YqSM bV!t yWAPYkVsckKPxy-a- TLF!C\n",
-      "CPU times: total: 8.41 s\n",
-      "Wall time: 8.59 s\n"
+      "JULIET:\n",
+      "Is there no sR?wBPfBE!?NOkvVtn!Uk?.tf\n",
+      "AFBZaazYgJjAJ 3tSSmIVBAECtrGjE,GR?h $JROS\n",
+      "Wwfj.SOwXMo,pMmS3f&oGj.lXToHH3:UPakjjgXH\n",
+      "pEuH.WtVa-AftL.leL!V3wtQiJ$Xa&m kV\n",
+      "HliBc XAOiTklq NywWILJMY',z\n",
+      "N?dSkhs XNSiv I:FwaPErAzcVtF B?$QZO3nR?qYH$ SjWEWN\n",
+      "hEE.:FU;WHtpUeZzzJ3Y'tk!zLkcX3.Znii ,kRYt3dzLztabIZiZCH.UZoEWWgRAm\n",
+      "'NRTUiW\n",
+      "EVJtEZtPtnzBmp,X tAZHZEkB-PkWWGt3 ES$!HtrqW!iMVyadxMMgfq!bEPOdWRl,\n",
+      "xyEcHBgAZxU.aZYO,kA aOV, ZO3wkF: mQB3GJGrk,RWWE!aw\n",
+      "PQOo. B$\n",
+      "-VJGYt?ABo?MjPxihG,!!Q?GBZWdgbaU:'IqjsmgtXW:qBmSV'ybESi?z\n",
+      ".UzUhzU l3WYG&wsGh:G\n",
+      "u$?SgEr\n",
+      "bXOqH'PtvogIMs:?d:FXUtbVMr.iW  U?OOoo&P&V?VUSpgzDbFt!zGEipSuf:-YA\n",
+      "tO:O- cEvSlJiSEsWoB-A.;A QHw&GmKpru-gs'PN?z.WrgQ-HaZt3\n",
+      ";jM!PO?AA-SRgkLg I,!wdEtaV'hz\n",
+      "Ej,B rAEZOvleWUVHi:.pZqHlW kgDpOYUPMwdmsRKUEALS3Q.s:tLvrg'wtdSVVt\n",
+      "a-ikPtr;v3dLljBWtuKhgkgtVE?Fois-HONE BUUYb.Ms-$ZVWtqtDBlL?M.zSC&.:V'ZgAtOwatBA QfedrRFR.O W?ewsnpVXLZbwe.V3MEP ;ATiLUZUOSb.\n",
+      "gnaaAjigX\n",
+      "AF'w\n",
+      "qs3kw$hm,Dcb:LzyiZySl?TfY?.lB.r-q?-M$WIPaUVpI :\n",
+      "UEmUWdqBTlWp\n",
+      "jSwfRvb KB-mRbNwrHvV,seim3?ociSUItAV\n",
+      "H.-BDt-B-d\n",
+      "laAI :H3G\n",
+      "RKBTAU.Ptm\n",
+      "Ss\n",
+      "CPU times: total: 9.14 s\n",
+      "Wall time: 9.98 s\n"
      ]
     }
    ],
@@ -753,7 +775,7 @@
     "\n",
     "\n",
     "# Hyperparameters\n",
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "block_size = 128\n",
     "feature_dim = 256\n",
     "number_of_sa_heads = 4\n",
@@ -769,6 +791,8 @@
     "training_loss = []\n",
     "cv_loss = []\n",
     "\n",
+    "torch.set_float32_matmul_precision('medium')\n",
+    "\n",
     "model = BaseModel_V3(len_vocab, \n",
     "                     feature_dim, \n",
     "                     output_dim=len_vocab, \n",
@@ -777,6 +801,8 @@
     "                     number_of_sa_blocks=number_of_sa_blocks,\n",
     "                     dropout=dropout,\n",
     "                     d=default_device).to(default_device)\n",
+    "# model = torch.compile(model)\n",
+    "print(f\"Parameter Count: { sum(p.numel() for p in model.parameters()) // 1e6 }M\")\n",
     "\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
     "\n",
@@ -794,30 +820,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:     0\tTraining Loss: 4.40761680\tValidation Loss: 4.40533403\n",
-      "Epoch:  1000\tTraining Loss: 2.40461211\tValidation Loss: 2.45324368\n",
-      "Epoch:  2000\tTraining Loss: 2.22741909\tValidation Loss: 2.28174195\n",
-      "Epoch:  3000\tTraining Loss: 2.04851852\tValidation Loss: 2.10586337\n",
-      "Epoch:  4000\tTraining Loss: 1.88034202\tValidation Loss: 1.93925334\n",
-      "Epoch:  5000\tTraining Loss: 1.71154801\tValidation Loss: 1.76935338\n",
-      "Epoch:  6000\tTraining Loss: 1.57776451\tValidation Loss: 1.63774517\n",
-      "Epoch:  7000\tTraining Loss: 1.45968094\tValidation Loss: 1.52404516\n",
-      "Epoch:  8000\tTraining Loss: 1.36146311\tValidation Loss: 1.42811651\n",
-      "Epoch:  9000\tTraining Loss: 1.26062835\tValidation Loss: 1.33266368\n"
+      "Epoch:     0\tTraining Loss: 4.35932386\tValidation Loss: 4.36320275\n",
+      "Epoch:  1000\tTraining Loss: 2.22131919\tValidation Loss: 2.28309704\n",
+      "Epoch:  2000\tTraining Loss: 1.90929756\tValidation Loss: 2.00249016\n",
+      "Epoch:  3000\tTraining Loss: 1.69450231\tValidation Loss: 1.81822816\n",
+      "Epoch:  4000\tTraining Loss: 1.59183669\tValidation Loss: 1.72991966\n",
+      "Epoch:  5000\tTraining Loss: 1.52557600\tValidation Loss: 1.67627865\n",
+      "Epoch:  6000\tTraining Loss: 1.47293761\tValidation Loss: 1.63804552\n",
+      "Epoch:  7000\tTraining Loss: 1.43344962\tValidation Loss: 1.60062900\n",
+      "Epoch:  8000\tTraining Loss: 1.40355687\tValidation Loss: 1.57921094\n",
+      "Epoch:  9000\tTraining Loss: 1.37588187\tValidation Loss: 1.57206950\n",
+      "Epoch: 10000\tTraining Loss: 1.35409815\tValidation Loss: 1.54908563\n",
+      "Epoch: 11000\tTraining Loss: 1.33531333\tValidation Loss: 1.53828283\n",
+      "Epoch: 12000\tTraining Loss: 1.32086764\tValidation Loss: 1.52796265\n",
+      "Epoch: 13000\tTraining Loss: 1.30206818\tValidation Loss: 1.52523427\n",
+      "Epoch: 14000\tTraining Loss: 1.28996991\tValidation Loss: 1.51365389\n",
+      "Epoch: 15000\tTraining Loss: 1.28299910\tValidation Loss: 1.50805835\n",
+      "Epoch: 16000\tTraining Loss: 1.26932453\tValidation Loss: 1.49945696\n",
+      "Epoch: 17000\tTraining Loss: 1.25705719\tValidation Loss: 1.49812525\n",
+      "Epoch: 18000\tTraining Loss: 1.24569543\tValidation Loss: 1.48977989\n",
+      "Epoch: 19000\tTraining Loss: 1.23661391\tValidation Loss: 1.49264144\n",
+      "CPU times: total: 9min 51s\n",
+      "Wall time: 10min 26s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "epochs = 10000\n",
+    "epochs = 20000\n",
     "model.train()\n",
     "for epoch in range(epochs):\n",
     "\n",
@@ -838,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -846,29 +884,56 @@
      "output_type": "stream",
      "text": [
       "--------------------------Sample From Model (After Training) --------------------------\n",
-      " knows the lord protector's mind herein?\n",
-      "Who is most inward with the royal duke?\n",
+      "ry.\n",
+      "Madam, farewell.\n",
       "\n",
-      "BISHOP OF ELY:\n",
-      "Your grace, we think, should so al co do's orec nchef ford ured'r hid dear lit hul g elisees thtir tranlch heris eoatnd guln-ct ether uthe ta tan thodsun,d whets hat srapthe 'le rta sto tound sigu\n",
-      "tearbes oroaress ce sar amde: rih thep hrads fobered\n",
-      "Tatere is rch clapec hive utse: hos wutes Hot hume hagsldefy;\n",
-      "Go my didled sadnd fid bowll earCc ub le rate she tha rf cunles, mo bugh bat hovraghend i eHotsl atherd ue thenft cercer hapter tares\n",
-      "tos beovance rou pe ifores Kherad fhit iry s; at mbeiped Mans te spe arcetereions ad pat ora mor as a lo elono. rourtin if to mhrec ofre fl rad me ush oos.\n",
-      " pyh\n",
-      "fot. Ey ca'd uto boie for oante pdob cour;' eye bug to r hate'Nud\n",
+      "DUCHESS OF YORK:\n",
+      "I'll go along with you.\n",
       "\n",
-      "FTOSET:re bof.\n",
-      " Ta wrater thult, hul.\n",
-      " toces futred, tagntoM\n",
-      "Ed il:'ny sobfll, tme htre hosdous lenl fer,\n",
-      "'lo to co thehlk o om thoudued an, to t ate fishf s\n"
+      "QUEEN ELIZABETH:\n",
+      "You have no cause.\n",
+      "\n",
+      "ARCHBISHOP OF YORK:\n",
+      "My gracious lady!\n",
+      "\n",
+      "KING EDWARD IV:\n",
+      "O, let's a goodly son, let it in little.\n",
+      "\n",
+      "JOHN OF GAUNT:\n",
+      "'Two says that are placeful brother move\n",
+      "Breath thy haste sendsires coynalths thou;\n",
+      "Strike you, ere I me speed himself\n",
+      "That thy daughter becomes of mine interress\n",
+      "Flatters in svature troopherd than my alivery's.\n",
+      "Therefore, Itding had gives by this beast\n",
+      "sweet but as eyes wisely against her belon to Me.\n",
+      "\n",
+      "DUKE VINCENTIO:\n",
+      "Nay, grace for our chiving speech work\n",
+      "For his glove, and says shall be gone.-\n",
+      "\n",
+      "LEONTES:\n",
+      "Marry, you.\n",
+      "\n",
+      "ROMEO:\n",
+      "Why, funt, or all queen of what he does\n",
+      "Be justice of wonding; and you will\n",
+      "For the faithful of oyers and, faith, she wrong\n",
+      "From the swordies have been been believe,\n",
+      "Either see hate,\n",
+      "Your nature sun of your clippose: and how I\n",
+      "shall sspoke no loss of her more ever me.\n",
+      "I was the odds t\n",
+      "CPU times: total: 5.3 s\n",
+      "Wall time: 9.33 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "print(\"--------------------------Sample From Model (After Training) --------------------------\")\n",
-    "retval = model.generate(X[4, :].to(default_device), max_characters=800, max_block_size=block_size, d=default_device)\n",
+    "retval = model.generate(X[1, :].to(default_device), max_characters=800, max_block_size=block_size, d=default_device)\n",
     "print(dataUtils.decode(retval))"
    ]
   }
